# cdm-mapper

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.md  README.rst  __init__.py  aggregate_cdm.py  lmrlib.py  performance_tests.py  properties.py  pyproject.toml  requirements.txt  tool_devel.py
.github/workflows/: ci.yml
cdm/: __init__.py  properties.py
cdm/common/: logging_hdlr.py  pandas_TextParser_hdlr.py
cdm/gridded_stats/: gridded_stats.py
cdm/mapper/: mapper.py
cdm/table_reader/: table_reader.py
cdm/table_writer/: table_writer.py
ci/requirements/: docs.yml  environment.yml  requirements.txt
common/: pandas_TextParser_hdlr.py
docs/: Data_models.docx  Developers_manual .docx  User_manual.docx  api.rst  cdm-tables-mapping-files-and-descriptors.rst  conf.py  getting-started.rst  how-to-register-a-new-data-model-mapping.rst  hyperlinks.rst  index.rst  tool-set-up.rst  ~$er_manual.docx  ~$ta_models.docx
docs/example_notebooks/: CDM_mapper_example_deck704.ipynb
docs/notebooks/: CDM_mapper_example_deck704.ipynb
gridded_stats/: gridded_stats.py  gridded_stats_old.py
lib/mappings/: mappings_hdlr.py
lib/mappings/gcc_mapping/: gcc_mapping.py  header.json  observations-at.json  observations-dpt.json  observations-slp.json  observations-wbt.json  observations-wd.json
lib/mappings/icoads_r3000/: header.json  icoads_r3000.py  observations-at.json  observations-dpt.json  observations-slp.json  observations-sst.json  observations-wbt.json  observations-wd.json  observations-ws.json
lib/mappings/icoads_r3000_NRT/: header.json  icoads_r3000_NRT.py  observations-at.json  observations-dpt.json  observations-slp.json  observations-wbt.json  observations-ws.json
lib/mappings/icoads_r3000_d701/: header.json  icoads_r3000_d701.py  observations-at.json  observations-dpt.json  observations-slp.json  observations-sst.json  observations-wbt.json  observations-wd.json  observations-ws.json
lib/mappings/icoads_r3000_d702/: observations-at.json  observations-slp.json
lib/mappings/icoads_r3000_d704/: header.json  icoads_r3000_d704.py  observations-at.json  observations-dpt.json  observations-slp.json  observations-sst.json  observations-wbt.json  observations-wd.json  observations-ws.json
lib/mappings/icoads_r3000_d714/: header.json  icoads_r3000_d714.py  observations-at.json  observations-dpt.json  observations-slp.json  observations-sst.json  observations-wbt.json  observations-wd.json  observations-ws.json
lib/tables/: header.json  observations.json  tables_hdlr.py
mapper/: mapper.py
table_writer/: table_writer.py
tests/: tests.py
(+67 files in other folders)
